Sun Apr 22 15:50:08 2001  Anthony Green  <green@redhat.com>

	* include/ffi_common.h: Delete, after moving contents to...
	* include/ffi_private.h: Subsume contents of ffi_common.h.
	* include/Makefile.am (noinst_HEADERS): Remove ffi_common.h.
	* include/Makefile.in: Rebuilt.
	* arm/ffi.c, m68k/ffi.c, mips/ffi.c, powerpc/ffi.c, s390/ffi.c,
	ia64/ffi.c: Include ffi_private.h, not ffi_common.h.
	* alpha/ffi.c, sparc/ffi.c, x86/ffi.c: Don't include ffi_common.h.
	* types.c, raw_api.c, java_raw_api.c, prep_cif.c: Don't include
	ffi_common.h.
	* debug.c: Include ffi_private.h instead of ffi_common.h.

	* mips/ffi.c (calc_n32_struct_flags): Make static.
	(FIX_ARGP): Remove call to debugging routine ffi_stop_here.

	* mips/n32.S: Include ffi_private.h.
	* mips/o32.S: Include ffi_private.h.

Sun Apr 22 12:37:44 2001  Anthony Green  <green@redhat.com>

	* README: Update some comments.

	* Makefile.am (SUBDIRS): Add include so ffi.h gets installed.
	* Makefile.in: Rebuilt.

	* include/ffi.h: Change ALPHA to __alpha__ and SPARC to __sparc__.
	* types.c: Ditto.
	* prep_cif.c (ffi_prep_cif): Ditto.

	* alpha/ffi.c, alpha/osf.S, sparc/ffi.c, sparc/v8.S, sparc/v9.S:
	Include ffi_private.h.

	* include/ffi_private.h (FFI_TYPE_LAST): Define.

Sun Apr 22 11:41:55 2001  Anthony Green  <green@redhat.com>

	* Revolutionary changes.  Target independent ffi.h.  dejagnu
	testing infrastructure.  Moved source files around.  Configure no
	longer depends on run tests.

Sat Apr 14 20:49:46 2001  Anthony Green  <green@cygnus.com>

	* mips/ffi.c: Include mips/mips.h.
	* mips/o32.S: Ditto.
	* mips/n32.S: Ditto.
	* mips/o32.s: Deleted.
	* mips/n32.s: Deleted.

Sat Apr 14 20:47:13 2001  Anthony Green  <green@cygnus.com>

	* mips/mips.h: Moved from include/ffi_mips.h.

Sat Apr 14 20:09:05 2001  Anthony Green  <green@cygnus.com>

	* powerpc/asm.h: Remove rcs id.

Sat Apr 14 15:04:08 2001  Anthony Green  <green@cygnus.com>

	* configure.in: Use AC_COMPILE_CHECK_SIZEOF and
	AC_C_BIGENDIAN_CROSS.
