@@ -8,12 +8,31 @@ else
 SUBDIRS = include
 endif
 
-EXTRA_DIST = LICENSE README ChangeLog.v1 alpha/ffi.c arm/ffi.c	\
-   ia64/ffi.c m68k/ffi.c mips/ffi.c powerpc/ffi.c s390/ffi.c	\
-   sparc/ffi.c x86/ffi.c alpha/osf.S arm/sysv.S ia64/unix.S	\
-   m68k/sysv.S mips/n32.S mips/o32.S				\
-   powerpc/sysv.S s390/sysv.S sparc/v8.S sparc/v9.S x86/win32.S	\
-   x86/sysv.S
+EXTRA_DIST = 		\
+	LICENSE 	\
+	README		\
+	ChangeLog.v1 	\
+	alpha/ffi.c 	\
+	arm/ffi.c	\
+	ia64/ffi.c 	\
+	m68k/ffi.c 	\
+	mips/ffi.c 	\
+	powerpc/ffi.c 	\
+	s390/ffi.c	\
+	sparc/ffi.c 	\
+	x86/ffi.c 	\
+	alpha/osf.S 	\
+	arm/sysv.S 	\
+	ia64/unix.S	\
+	m68k/sysv.S 	\
+	mips/n32.S 	\
+	mips/o32.S	\
+	powerpc/sysv.S 	\
+	s390/sysv.S 	\
+	sparc/v8.S 	\
+	sparc/v9.S 	\
+	x86/win32.S	\
+	x86/sysv.S
 
 # Multilib support variables.
 MULTISRCTOP =
@@ -32,15 +51,22 @@ toolexecdir = $(exec_prefix)/$(target_alias)
 toolexeclibdir = $(toolexecdir)/lib$(MULTISUBDIR)
 endif
 
-toolexeclib_LTLIBRARIES = libffi.la
+toolexeclib_LIBRARIES = libffi.a
 
 ## Work around automake deficiency
-nodist_libffi_la_SOURCES = t-ffi.c t-asm.S
-libffi_la_SOURCES = debug.c prep_cif.c types.c \
-		raw_api.c java_raw_api.c $(nodist_libffi_la_SOURCES)
+nodist_libffi_a_SOURCES = t-ffi.c t-asm.S
+
+libffi_a_SOURCES = 			\
+	debug.c 			\
+	prep_cif.c 			\
+	types.c 			\
+	raw_api.c 			\
+	java_raw_api.c 			\
+	$(nodist_libffi_a_SOURCES)
 
 AM_CFLAGS = -fexceptions
 
-libffi_la_LDFLAGS = -release $(VERSION) 
-
-INCLUDES = -I$(top_srcdir)/include -Iinclude -I$(top_srcdir)/src
+INCLUDES = 			\
+	-I$(top_srcdir)/include \
+	-Iinclude 		\
+	-I$(top_srcdir)/src
